--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <body>
     <header>
         <nav id="top-menu"></nav>
+        <!-- Add the <nav> element below -->
+        <nav id="sub-menu"></nav>
     </header>
     <main></main>
 </body>
